<resources>
    <!--app_name在gradle内定义-->
    <!--<string name="app_name">MvvmLibrary</string>-->
    <string name="home_bottom_home">首页</string>
    <string name="home_bottom_popular_science">专家在线</string>
    <string name="home_bottom_appointment">眼科商城</string>
    <string name="home_bottom_mine">我的</string>

    <string name="page_error_service">页面出错啦</string>
    <string name="page_empty_service">列表暂时为空</string>
    <string name="page_empty_service_tips">请新增</string>
    <string name="page_error_service_tips">糟糕，请返回重新试一下吧</string>
    <string name="rmb_symbol">¥</string>

    <!-- 登录   -->
    <string name="title_login_register">登录/注册</string>
    <string name="action_get_verify_code">获取验证码</string>
    <string name="title_login">登录</string>
    <string name="title_done">完成</string>
    <string name="title_login_by_verify_code">验证码登录</string>
    <string name="title_register">注册</string>
    <string name="lab_forget_password">忘记密码?</string>
    <string name="lab_login_by_verify_code">验证码登录</string>
    <string name="lab_login_by_password">密码登录</string>
    <string name="tip_please_input_phone_number">请输入手机号码</string>
    <string name="title_phone_number">手机号码</string>
    <string name="title_password">密码</string>
    <string name="title_old_password">旧密码</string>
    <string name="hint_please_input_verify_code">请输入密码</string>
    <string name="lab_verify_code">密码</string>
    <string name="tip_password_error">密码必须是6~16位字母和数字的组合！</string>
    <string name="tip_new_password_error">新密码必须是6~16位字母和数字的组合！</string>
    <string name="tip_phone_number_error">无效的手机号！</string>
    <string name="regex_phone_number">^((13[0-9])|(14[5,7])|(15[0-3,5-9])|(16[6])|(17[0,1,3,5-8])|(18[0-9])|(19[8,9]))\\d{8}$</string>
    <string name="tip_verify_code_error">请输入6位数密码</string>
    <string name="regex_verify_code">^\\d{6}$</string>
    <string name="regex_password">^(?![0-9]+$)(?![a-zA-Z]+$)[0-9A-Za-z]{6,16}$</string>
    <string name="title_forget_password">重置密码</string>
    <string name="lab_register_account">点击注册即表示同意</string>
    <string name="lab_service_protocol"><![CDATA[<用户协议>]]></string>
    <string name="lab_logout_confirm">是否确认退出账号？</string>
    <string name="title_jump_login">跳过</string>
    <string name="count_down_finish">重新获取</string>
    <string name="regist_error">注册异常，请重试</string>
    <string name="reset_pwd_error">重置密码错误，请重试</string>
    <string name="text_login">点击登录</string>
    <string name="text_logout">退出登录</string>
    <string name="login_error">登录失败</string>
    <!--    首页-->
    <string name="vip_title1">体检预约</string>
    <string name="vip_subtitle1">了解自身健康问题</string>
    <string name="vip_title2">会员一</string>
    <string name="vip_subtitle2">开通会员专享服务</string>
    <string name="vip_title3">会员二</string>
    <string name="vip_subtitle3">会员，一触即发</string>
    <string name="text_name">姓名：</string>
    <string name="text_sex">性别：</string>
    <string name="text_age">年龄：</string>
    <string name="text_tel">电话：</string>
    <string name="text_time">时间：</string>
    <string name="address_now">现居住地：</string>
    <string name="appointment_time">预约时间：</string>
    <string name="text_commit">提交</string>
    <string name="text_confirm">确定</string>
    <string name="text_man">男</string>
    <string name="text_woman">女</string>
    <string name="sex_not_choose">还未选择性别</string>
    <string name="appointment_list">预约列表</string>
    <string name="text_add">新增</string>
    <string name="text_birthday">出生日期</string>

    <string name="left_eye">左眼</string>
    <string name="right_eye">左眼</string>
    <string name="http_empty">后台返回内容为空</string>
    <string name="need_name">请输入姓名</string>
    <string name="need_age">请输入年龄</string>
    <string name="need_phone">请输入手机号</string>
    <string name="need_address">请输入现居地</string>
    <string name="need_appointment_time">请输入预约时间</string>
    <string name="submit_error">提交错误，请重试</string>
    <string name="comming_soon">即将到来，敬请期待</string>
    <string name="diagnose_result">诊断结果</string>
    <string name="retry_later">请稍候再试</string>
    <string name="no_diagnose_result">暂无诊断结果</string>
    <string name="appointment_detail">预约详情</string>
</resources>
