<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.appointment.AppointmentAddActivity">

    <com.hjq.bar.TitleBar
            android:id="@+id/titleBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_bar_height"
            android:background="@color/color_major"
            android:paddingTop="@dimen/title_bar_padding_top"
            app:layout_constraintTop_toTopOf="parent"
            app:leftIcon="@drawable/ic_back_white"
            app:rightColor="@color/white"
            app:title="@string/appointment_detail"
            app:titleColor="@color/white"
            app:titleSize="18sp" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimension_margin_horizon_2"
            android:paddingHorizontal="@dimen/dimension_margin_horizon">

        <TextView
                style="@style/Setting.Content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_name" />

        <TextView
                android:id="@+id/nameTv"
                style="@style/Setting.Edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/SmallerPadding6" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/sexLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimension_margin_horizon_2"
            android:paddingHorizontal="@dimen/dimension_margin_horizon">

        <TextView
                style="@style/Setting.Content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_sex" />

        <TextView
                android:id="@+id/sexTv"
                style="@style/Setting.Edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/SmallerPadding6"
                tools:text="男" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimension_margin_horizon_2"
            android:paddingHorizontal="@dimen/dimension_margin_horizon">

        <TextView
                style="@style/Setting.Content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_age" />

        <TextView
                android:id="@+id/ageTv"
                style="@style/Setting.Edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/SmallerPadding6" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimension_margin_horizon_2"
            android:paddingHorizontal="@dimen/dimension_margin_horizon">

        <TextView
                style="@style/Setting.Content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_tel" />

        <TextView
                android:id="@+id/phoneTv"
                style="@style/Setting.Edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/SmallerPadding6" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimension_margin_horizon_2"
            android:paddingHorizontal="@dimen/dimension_margin_horizon">

        <TextView
                style="@style/Setting.Content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_now" />

        <TextView
                android:id="@+id/addressTv"
                style="@style/Setting.Edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/SmallerPadding6" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimension_margin_horizon_2"
            android:paddingHorizontal="@dimen/dimension_margin_horizon">

        <TextView
                style="@style/Setting.Content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appointment_time" />

        <TextView
                android:id="@+id/appointmentTimeTv"
                style="@style/Setting.Edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/SmallerPadding6"
                tools:text="122.33" />
    </LinearLayout>
</LinearLayout>