<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_bg">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/dimension_margin_horizon" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/dimension_margin_horizon" />

    <com.hjq.bar.TitleBar
            android:id="@+id/titleBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/main_bg"
            app:layout_constraintTop_toTopOf="parent"
            app:leftIcon="@drawable/ic_back"
            app:title="忘记密码"
            app:titleColor="@color/text_color_title"
            app:titleSize="18sp" />

    <TextView
            android:id="@+id/titleTv"
            style="@style/Setting.Title"
            android:layout_marginTop="@dimen/dimension_margin_vertical_1"
            android:text="忘记密码"
            app:layout_constraintLeft_toLeftOf="@id/leftGuide"
            app:layout_constraintTop_toBottomOf="@id/titleBar" />

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/registerPhoneIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical_fix"
            app:layout_constraintLeft_toLeftOf="@id/leftGuide"
            app:layout_constraintTop_toBottomOf="@id/titleTv"
            app:srcCompat="@drawable/register_phone" />

    <EditText
            android:id="@+id/phoneNumberEt"
            style="@style/Setting.Edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:hint="@string/tip_please_input_phone_number"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@id/registerPhoneIv"
            app:layout_constraintLeft_toRightOf="@id/registerPhoneIv"
            app:layout_constraintRight_toRightOf="@id/rightGuide"
            app:layout_constraintTop_toTopOf="@id/registerPhoneIv" />

    <View
            android:id="@+id/registerPhoneLineView"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="18dp"
            android:background="@color/line_color"
            app:layout_constraintLeft_toLeftOf="@id/leftGuide"
            app:layout_constraintRight_toRightOf="@id/rightGuide"
            app:layout_constraintTop_toBottomOf="@id/registerPhoneIv" />

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/registerCodeIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimension_margin_vertical_1"
            app:layout_constraintLeft_toLeftOf="@id/leftGuide"
            app:layout_constraintTop_toBottomOf="@id/registerPhoneLineView"
            app:srcCompat="@drawable/register_code" />

    <EditText
            android:id="@+id/verifyCodeEt"
            style="@style/Setting.Edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:hint="请输入验证码"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@id/registerCodeIv"
            app:layout_constraintLeft_toRightOf="@id/registerCodeIv"
            app:layout_constraintRight_toLeftOf="@id/getVerifyCodeBtn"
            app:layout_constraintTop_toTopOf="@id/registerCodeIv" />

    <TextView
            android:id="@+id/getVerifyCodeBtn"
            style="@style/Setting.Link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/action_get_verify_code"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@id/registerCodeIv"
            app:layout_constraintLeft_toRightOf="@id/verifyCodeEt"
            app:layout_constraintRight_toLeftOf="@id/rightGuide"
            app:layout_constraintTop_toTopOf="@id/registerCodeIv" />

    <View
            android:id="@+id/registerCodeLineView"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="18dp"
            android:background="@color/line_color"
            app:layout_constraintLeft_toLeftOf="@id/leftGuide"
            app:layout_constraintRight_toRightOf="@id/rightGuide"
            app:layout_constraintTop_toBottomOf="@id/registerCodeIv" />

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/passwordIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimension_margin_vertical_1"
            app:layout_constraintLeft_toLeftOf="@id/leftGuide"
            app:layout_constraintTop_toBottomOf="@id/registerCodeLineView"
            app:srcCompat="@drawable/register_pwd" />

    <EditText
            android:id="@+id/passwordEt"
            style="@style/Setting.Edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:hint="请设置密码"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="@id/passwordIv"
            app:layout_constraintLeft_toRightOf="@id/passwordIv"
            app:layout_constraintRight_toRightOf="@id/rightGuide"
            app:layout_constraintTop_toTopOf="@id/passwordIv" />

    <View
            android:id="@+id/passwordLineView"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="18dp"
            android:background="@color/line_color"
            app:layout_constraintLeft_toLeftOf="@id/leftGuide"
            app:layout_constraintRight_toRightOf="@id/rightGuide"
            app:layout_constraintTop_toBottomOf="@id/passwordIv" />

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/confirmPasswordIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimension_margin_vertical_1"
            app:layout_constraintLeft_toLeftOf="@id/leftGuide"
            app:layout_constraintTop_toBottomOf="@id/passwordLineView"
            app:srcCompat="@drawable/register_confirm_pwd" />

    <EditText
            android:id="@+id/confirmPasswordEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:hint="请再次确认密码"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="@id/confirmPasswordIv"
            app:layout_constraintLeft_toRightOf="@id/confirmPasswordIv"
            app:layout_constraintRight_toRightOf="@id/rightGuide"
            app:layout_constraintTop_toTopOf="@id/confirmPasswordIv" />

    <View
            android:id="@+id/confirmPasswordLineView"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="18dp"
            android:background="@color/line_color"
            app:layout_constraintLeft_toLeftOf="@id/leftGuide"
            app:layout_constraintRight_toRightOf="@id/rightGuide"
            app:layout_constraintTop_toBottomOf="@id/confirmPasswordIv" />

    <TextView
            android:id="@+id/resetPasswordBtn"
            style="@style/AppBtn.Login"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/dimension_margin_vertical_1"
            android:enabled="false"
            android:text="@string/title_done"
            app:layout_constraintLeft_toLeftOf="@id/leftGuide"
            app:layout_constraintRight_toRightOf="@id/rightGuide"
            app:layout_constraintTop_toBottomOf="@id/confirmPasswordLineView" />

</androidx.constraintlayout.widget.ConstraintLayout>
